<resources>
    <string name="app_name">Idle Core</string>
    <string name="p0">⓪</string>
    <string name="p1">①</string>
    <string name="p2">②</string>
    <string name="p3">③</string>
    <string name="p4">④</string>
    <string name="p5">⑤</string>
    <string name="p6">⑥</string>
    <string name="p7">⑦</string>
    <string name="p8">⑧</string>
    <string name="p9">⑨</string>
    <string name="p10">⑩</string>
    <string name="p11">⑪</string>
    <string name="p12">⑫</string>
    <string name="p13">⑬</string>
    <string name="p14">⑭</string>
    <string name="p15">⑮</string>
    <string name="p16">⑯</string>
    <string name="p17">⑰</string>
    <string name="p18">⑱</string>
    <string name="p19">⑲</string>
    <string name="p20">⑳</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class
        aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta
        lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui.
        Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin
        libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer
        id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu
        libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus
        lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur
        ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras
        bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="disclaimer">This app is in development and WILL have some jank in it. Please be patient as most issues are known and are being worked on.\nThe most obvious problem is the p0 generator prices, count, and pps labels. They currently start up with placeholder text, but can be fixed by clicking one of the buy buttons.\n\nI am also aware that the numbers used are not balanced. I simply used powers of 10 as a placeholder until I get to a point where I can balance the numbers.\n\nThanks for your patience and understanding!\n-Avnior</string>
    <string name="disclaimer_settings"><![CDATA[*Known Issue* -> Opening this settings screen breaks the game loop. This means that none of the generators will work (among other things).\n\nCurrent Workaround: Close and re-open the app. This should still save any changes made to these settings.]]></string>
    <string name="overviewText">Welcome to Idle Core. The inspiration and goal for this game is to strip the idle/incremental genre down to its core concepts. There\'s no fluff here. No characters. No story. No needless graphics. Just pure idle/incremental gameplay.\n\nWhat is the core goal of the idle/incremental genre? Progress. Some genres progress through story. Others through stats and gear. This genre? Get bigger numbers. It\'s that simple.\n\nFor ease of reference, I call these numbers points.</string>
    <string name="conceptsText">The first concept introduced is the manual click. This is the simple, \"click the button, get a point\". Not much more to explain.\n\nThe second concept introduced is the idea of automatic generation. Just click one of the buttons to buy one of the generators, and it will start giving you points over time. The earlier generators (starting with 1) cost less, but likewise generate less per second. However, they will provide a good base to start you off.\n\n*COMING IN v1.0*\nThe next concept is what is often refered to as \"prestiges\". For the sake of this game, I\'ve been calling these \"resets\", which is a little clearer as to what it does. The core idea is that by resetting, you earn a separate set of points that you can spend on something new. More on that in the next concept.\nResets often come in multiple layers, with a new version of resetting giving you yet another set of points. These different points and their respective layers are labled with numbers. On the bottom, you\'ll find the \'⓪\' button, which will bring you to the layer 0 screen which holds the assorted things you can do on that layer. At some point, you\'ll unlock the ability to reset layer 0 to earn ① (p1 points). After your first reset, you\'ll unlock the \'①\' button which takes you to the layer 1 screen.\nEach layer\'s reset will reset all layers beneath it. This means that the higher layer resets will take longer to get back to after resetting, though it is worth it anyways since you will be able to get further in the end.</string>
    <string name="versionNumber">v0.1</string>
</resources>