<?xml version="1.0" encoding="utf-8"?>

<!--
* This code is designed, developed, and maintained by Kevin Holt.
* You may not copy, distribute, or reuse any part of this project.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/helpConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView android:id="@+id/versionNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/versionNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView android:id="@+id/helpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Help"
            android:textSize="30sp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView android:id="@+id/overviewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="25dp"
            android:text="Overview"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/helpTitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView android:id="@+id/overviewText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/overviewText"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            app:layout_constraintTop_toBottomOf="@id/overviewTitle"
            app:layout_constraintStart_toStartOf="@id/overviewTitle"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView android:id="@+id/conceptsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginTop="24dp"
            android:text="Concepts"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/overviewTitle"
            app:layout_constraintTop_toBottomOf="@id/overviewText" />

        <TextView android:id="@+id/conceptsText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="35dp"
            android:text="@string/conceptsText"
            app:layout_constraintTop_toBottomOf="@id/conceptsTitle"
            app:layout_constraintStart_toStartOf="@id/overviewText"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>