<?xml version="1.0" encoding="utf-8"?>

<!--
* This code is designed, developed, and maintained by Kevin Holt.
* You may not copy, distribute, or reuse any part of this project.
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:theme="@style/Theme.IdleCore">

    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/black"
        android:paddingBottom="5dp"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/p0_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="15dp"
            android:lines="1"
            android:text="COUNT"
            android:textColor="@color/white"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@id/topBar"
            app:layout_constraintStart_toEndOf="@id/p0_countSymbol"
            app:layout_constraintEnd_toStartOf="@id/settingsButton"
            app:layout_constraintTop_toTopOf="@id/topBar"
            app:layout_constraintVertical_bias="0.0" />

        <TextView android:id="@+id/p0_countSymbol"
            android:text="@string/p0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintTop_toTopOf="@id/topBar"
            app:layout_constraintBottom_toBottomOf="@id/topBar"
            app:layout_constraintStart_toStartOf="@id/topBar"
            android:layout_marginStart="2dp"/>

        <TextView android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="☰"
            android:textSize="30dp"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            app:layout_constraintTop_toTopOf="@+id/topBar"
            app:layout_constraintBottom_toBottomOf="@+id/topBar"
            app:layout_constraintEnd_toEndOf="@+id/topBar"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        android:background="@color/black">

        <Button android:id="@+id/navigation_p0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/bottom_nav_textSize"
            android:text="@string/p0" />

        <Button android:id="@+id/navigation_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/bottom_nav_textSize"
            android:text="@string/p1"
            android:visibility="visible" />

        <Button android:id="@+id/navigation_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/bottom_nav_textSize"
            android:text="@string/p2"
            android:visibility="visible" />

        <Button android:id="@+id/navigation_p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/bottom_nav_textSize"
            android:text="@string/p3"
            android:visibility="visible" />

        <Button android:id="@+id/navigation_p4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/bottom_nav_textSize"
            android:text="@string/p4"
            android:visibility="visible" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/disclaimerOuterBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        android:padding="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/disclaimerInnerBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/background"
            android:padding="15dp">

            <TextView android:id="@+id/disclaimerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Disclaimer"
                android:textSize="24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView android:id="@+id/disclaimerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:layout_marginTop="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/disclaimerTitle" />

            <Button android:id="@+id/disclaimerCloseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Close"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/disclaimerText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/loadingScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/background">

        <TextView android:id="@+id/versionNumber"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/versionNumber"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView android:id="@+id/idleCoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Idle Core"
            android:textSize="80dp"
            android:layout_marginBottom="-60dp"
            app:layout_constraintBottom_toTopOf="@id/avniLogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView android:id="@+id/avniLogo"
            android:layout_width="326dp"
            android:layout_height="436dp"
            app:layout_constraintVertical_bias="0.35"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avnilogo_large___transparent" />

        <TextView android:id="@+id/avniorLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Avnior"
            android:textSize="60dp"
            app:layout_constraintBottom_toBottomOf="@id/avniLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView android:id="@+id/loadingLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Loading..."
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avniorLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>